dataset1235/2025-2/1153765216/users/1581346053/executions/2747719322_4233865845.log
== SUBMISSION (2025-08-19 19:11:44)
-- CODE: 
tempC = float(input("Temperatura em f"))
tempF = (tempC*9/5)+ 32
print(round(tempF, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em f-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em f14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em f212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em f68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em f32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em f86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:11:32)
-- CODE: 
tempCempC = float(input("Temperatura em f"))
tempF = (tempC*9/5)+ 32
print(round(tempF, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = (tempC*9/5)+ 32
             ^^^^^
NameError: name 'tempC' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = (tempC*9/5)+ 32
             ^^^^^
NameError: name 'tempC' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = (tempC*9/5)+ 32
             ^^^^^
NameError: name 'tempC' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = (tempC*9/5)+ 32
             ^^^^^
NameError: name 'tempC' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = (tempC*9/5)+ 32
             ^^^^^
NameError: name 'tempC' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempF = (tempC*9/5)+ 32
             ^^^^^
NameError: name 'tempC' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
